Commit Spinner XML

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Calculadora</string>
+    <string name="spn_tittle">Escoja una operacion</string>
+    <string-array name="operacion">
+        <item>Seleccione una opcion</item>
+        <item>Suma</item>
+        <item>Resta</item>
+        <item>Multiplicacion</item>
+        <item>Division</item>
+    </string-array>
 </resources>
